--- a/patches/etc/rc.conf
+++ b/patches/etc/rc.conf
@@ -151,7 +151,7 @@ unicode="YES"
 #
 # This should be set to the value representing the environment this file is
 # PRESENTLY in, not the virtualization the environment is capable of.
-rc_sys="lxc"
+rc_sys=""
 
 # This is the number of tty's used in most of the rc-scripts (like
 # consolefont, numlock, etc ...)
