Enable boot logs and added a customized dhcpd config to prevent hostname from being overriden. #1

--- a/patches/etc/rc.conf
+++ b/patches/etc/rc.conf
@@ -45,7 +45,7 @@ rc_shell=/sbin/sulogin
 # /var/log/rc.log
 # NOTE: Linux systems require the devfs service to be started before
 # logging can take place and as such cannot log the sysinit runlevel.
-#rc_logger="YES"
+rc_logger="YES"
 
 # Through rc_log_path you can specify a custom log file.
 # The default value is: /var/log/rc.log
