--- a/patches/etc/ntp.conf
+++ b/patches/etc/ntp.conf
@@ -8,7 +8,7 @@
 #server		ntp.example.tld		iburst
 
 # Common pool for random people
-server ntp.int.cloud.online.net
+server ntp.int.scaleway.com
 
 # Pools for Gentoo users
 server 0.gentoo.pool.ntp.org
