--- a/patches/etc/rc.conf
+++ b/patches/etc/rc.conf
@@ -65,7 +65,7 @@ rc_logger="YES"
 
 # rc_nostop is a list of services which will not stop when changing runlevels.
 # This still allows the service itself to be stopped when called directly.
-#rc_nostop=""
+rc_nostop="networking"
 
 # rc will attempt to start crashed services by default.
 # However, it will not stop them by default as that could bring down other
